--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -24,11 +24,18 @@
                     {% endfor %}
                 </div>
                 <div class="carousel-inner gallery-slide">
-                    {% for i in range(1, 8) %}
                     <div class="carousel-item active gallery-slide">
+                        <img class="gallery-picture"
+                             src="{{ url_for('static', filename='assets/gallery/1.avif') }}"
+                             alt="{{ translations.gallery.alt_text }}"
+                             width="100%" height="100%">
+                    </div>
+                    {% for i in range(2, 8) %}
+                    <div class="carousel-item gallery-slide">
                         <img class="gallery-picture"
                              src="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.avif') }}"
                              alt="{{ translations.gallery.alt_text }}"
+                             loading="lazy"
                              width="100%" height="100%">
                     </div>
                     {% endfor %}
