gallery buttons tranlation

--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -82,7 +82,7 @@
         <div class="col-12 d-flex justify-content-center mb-5">
             <button class="btn btn-primary-purple d-flex align-items-center justify-content-center" id="gallery_btn">
                 <i class="bi bi-plus-circle" id="plus-btn-icon-large"></i>
-                <span class="ms-2">More pictures</span>
+                <span class="ms-2">{{ translations.gallery.more_pictures }}</span>
             </button>
         </div>
 
@@ -94,7 +94,7 @@
                     <button type="button" class="btn frame-btn d-flex align-items-center justify-content-center"
                             id="ig-frame-btn">
                         <i class="bi bi-instagram large-icon"></i>
-                        <span class="ms-2">Follow</span>
+                        <span class="ms-2">{{ translations.gallery.ig_follow }}</span>
                     </button>
                 </a>
             </div>
@@ -105,7 +105,7 @@
                     <button type="button" class="btn frame-btn d-flex align-items-center justify-content-center"
                             id="fb-frame-btn">
                         <i class="bi bi-facebook large-icon"></i>
-                        <span class="ms-2">Albums</span>
+                        <span class="ms-2">{{ translations.gallery.fb_albums }}</span>
                     </button>
                 </a>
             </div>
