--- a/app/static/css/information_styles.css
+++ b/app/static/css/information_styles.css
@@ -1,4 +1,4 @@
-.large-contact-content {
+.large-information-content {
   object-fit: cover;
   height: 100%; /* Ensure the iframe takes full height */
   width: 100%; /* Ensure the iframe takes full width */
@@ -33,7 +33,7 @@
     font-size: 1rem;
 }
 
-.contact-heading {
+.information-heading {
   margin-bottom: 4rem; /* Adjust the value as needed */
   color: var(--cream-purple);
 }
@@ -55,14 +55,14 @@
     vertical-align: middle;    /* Vertical centering */
 }
 
-.contact-container {
+.information-container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     min-height: 100%;
 }
-.contact-heading{
+.information-heading{
     margin-bottom: 2rem;
 }
 
@@ -90,7 +90,7 @@ footer {
   .location_detail {
     margin-bottom: 0; /* Adjust the value as needed */
   }
-  .contact-heading {
+  .information-heading {
     margin-bottom: 1rem; /* Adjust the value as needed */
     margin-top: 1rem; /* Adjust the value as needed */
   }
