--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,17 +73,16 @@
                             <table class="table table-bordered mb-2">
                                 <tbody>
                                 <tr>
-                                    <td class="address text-center">{{ translations.contact.location.address }}</td>
+                                    <td class="address text-center">{{ translations.information.location.address }}</td>
                                 </tr>
                                 </tbody>
                             </table>
 
                             <i class="bi bi-person-check-fill mb-1 normal-icon"></i>
-                            {% set info = translations.info %}
                             <table class="table table-bordered mb-2">
                                 <tbody>
                                 <tr>
-                                    <td class="address text-center">{{ info.ageRestriction }}</td>
+                                    <td class="address text-center">{{ translations.information.ageRestriction }}</td>
                                 </tr>
                                 </tbody>
                             </table>
