--- a/app/templates/information.html
+++ b/app/templates/information.html
@@ -2,21 +2,21 @@
 
 {% block extra_styles %}
 <!-- Custom CSS -->
-<link href="{{ url_for('static', filename='css/contact_styles.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='css/information_styles.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 
 <div class="container">
-    {% set contact = translations.contact %}
-    <h1 class="heading mt-0 text-center">{{ contact.title }}</h1>
+    {% set information = translations.information %}
+    <h1 class="heading mt-0 text-center">{{ information.title }}</h1>
     <hr class="mb-0">
     <!--    location details-->
     <div class="container mt-5">
         <div class="row">
             <div class="col-12 col-md-6 d-flex flex-column">
-                <h2 class="heading">{{ contact.connections }}</h2>
-                {% set location = contact.location %}
+                <h2 class="heading">{{ information.connections }}</h2>
+                {% set location = information.location %}
                 <ul class="location_details flex-grow-1">
                     <li class="location_detail">{{ location.address }}</li>
                     <li class="location_detail">{{ location.tram_stop.name }} - {{ location.tram_stop.distance }}
@@ -31,7 +31,7 @@
             </div>
             <div class="col-12 col-md-6 d-flex justify-content-center align-items-center d-none d-md-block">
                 <!-- Buttons to display map or open in a new window -->
-                <div id="map-button-container" class="d-flex flex-column text-center large-contact-content ">
+                <div id="map-button-container" class="d-flex flex-column text-center large-information-content ">
                     <button id="display-map-button" class="btn btn-outline-purple mb-5">
                             <span class="d-block map-button-text">
                                 {{ location.map_frame_button_text }}
@@ -47,7 +47,7 @@
                 </div>
 
                 <!-- Placeholder for iframe, initially empty -->
-                <div id="iframe-container" class="large-contact-content flex-grow-1 d-none"></div>
+                <div id="iframe-container" class="large-information-content flex-grow-1 d-none"></div>
             </div>
 
             <!-- Display button for small screens -->
@@ -64,11 +64,11 @@
     <div class="container mt-5">
         <div class="row d-flex align-items-stretch">
             <div class="col-12 col-md-6">
-                <img src="static/assets/img/entrance.avif" alt="{{ contact.entrance_image.alt }}"
-                     class="large-contact-content img-fluid">
+                <img src="static/assets/img/entrance.avif" alt="{{ information.entrance_image.alt }}"
+                     class="large-information-content img-fluid">
             </div>
             <div class="col-12 col-md-6 d-flex flex-column justify-content-between">
-                <h2 class="contact-heading">{{ contact.opening_hours.heading }}</h2>
+                <h2 class="information-heading">{{ information.opening_hours.heading }}</h2>
                 <div class="opening-hours-content flex-grow-1">
                     {% include "opening_hours.html" %}
                 </div>
@@ -81,14 +81,14 @@
     <div class="container mt-4 mb-4">
         <div class="row">
             <div class="col-12 col-md-6 text-center mb-2">
-                <h2 class="contact-heading"> Chat </h2>
+                <h2 class="information-heading"> Chat </h2>
                 <a href="https://www.instagram.com/direct/t/17842514916029460" class="btn btn-outline-purple"
                    target="_blank">
                     <i class="bi bi-chat-dots-fill normal-icon"></i> Instagram
                 </a>
             </div>
             <div class="col-12 col-md-6 text-center">
-                <h2 class="contact-heading"> Email </h2>
+                <h2 class="information-heading"> Email </h2>
                 <a href="mailto:club-termix@club-termix.cz" class="btn btn-outline-purple">
                     <i class="bi bi-envelope-at-fill"></i> club-termix@club-termix.cz
                 </a>
@@ -101,18 +101,17 @@
     <!--additional info-->
     <div class="row justify-content-center align-items-center mt-5">
         <div class="col-md-12 col-lg-8 col-xl-6 text-center">
-            <h2 class="contact-heading">{{ contact.additional_info.heading }}</h2>
+            <h2 class="information-heading">{{ information.additional_info.heading }}</h2>
             <div class="card">
                 <div class="card-header"></div>
                 <div class="card-body pt-1">
                     <div class="d-flex flex-column justify-content-center align-items-center">
 
                         <i class="bi bi-person-check-fill normal-icon mb-1"></i>
-                        {% set info = translations.info %}
                         <table class="table table-bordered mb-2">
                             <tbody>
                             <tr>
-                                <td class="address text-center">{{ info.ageRestriction }}</td>
+                                <td class="address text-center">{{ information.ageRestriction }}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -120,7 +119,7 @@
                         <i class="bi bi-cash-coin normal-icon mb-1"></i>
                         <table class="table table-bordered mb-2">
                             <tbody>
-                            {% for payment in info.payments %}
+                            {% for payment in information.payments %}
                             <tr>
                                 <td class="address text-center">{{ payment }}</td>
                             </tr>
@@ -132,7 +131,7 @@
                         <table class="table table-bordered mb-2">
                             <tbody>
                             <tr>
-                                <td class="address text-center">{{ info.cloakroom }}</td>
+                                <td class="address text-center">{{ information.cloakroom }}</td>
                             </tr>
                             </tbody>
                         </table>
@@ -148,7 +147,7 @@
     <div class="d-flex justify-content-center">
         <table class="mt-0 mb-0 text-center">
             <tr>
-                <td>{{ contact.operator }}:</td>
+                <td>{{ information.operator }}:</td>
                 <td>Termix Praha s.r.o.</td>
             </tr>
             <tr>
@@ -165,5 +164,5 @@
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', filename='js/script_contact.js') }}"></script>
+<script src="{{ url_for('static', filename='js/script_information.js') }}"></script>
 {% endblock %}
