aria labels to links

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,21 +35,23 @@
     <div class="container-fluid">
         <div class="d-flex align-items-center">
             <!-- TerMix Logo -->
-            <a href="{{ url_for('home', lang=lang) }}">
+            <a href="{{ url_for('home', lang=lang) }}" aria-label="{{ translations.home.title }}">
                 <img src="{{ url_for('static', filename='assets/logos/dark_gray_logo.svg') }}" class="navbar-brand"
                      id="header_logo"
-                     role="img" aria-label="Termix Logo" alt="Termix Logo">
+                     role="img" alt="Termix Logo">
             </a>
 
             <!-- Facebook Logo -->
             <a href="https://www.facebook.com/club.termix/" target="_blank"
-               class="nav-link px-3 text-body-secondary">
+               class="nav-link px-3 text-body-secondary"
+                aria-label="facebook">
                 <i class="bi bi-facebook normal-icon"></i>
             </a>
 
             <!-- Instagram Logo -->
             <a href="https://www.instagram.com/termix_club/" target="_blank"
-               class="nav-link px-3 text-body-secondary">
+               class="nav-link px-3 text-body-secondary"
+                aria-label="instagram">
                 <i class="bi bi-instagram normal-icon"></i>
             </a>
         </div>
@@ -94,25 +96,30 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
         <p class="col-md-4 mb-0 text-body-secondary">© 2003–{{ current_year }} Termix Praha s.r.o.</p>
         <a href="{{ url_for('home', lang=lang) }} "
-           class="col-md-4 d-flex justify-content-center home-scroll-up">
+           class="col-md-4 d-flex justify-content-center home-scroll-up"
+            aria-label="{{ translations.home.title }}">
             <img src="{{ url_for('static', filename='assets/logos/dark_gray_logo.svg') }}" class="bi me-2" width="40"
-                 aria-label="Termix Logo" alt="Termix Logo">
+                  alt="Termix Logo">
         </a>
         <ul class="nav col-md-4 justify-content-end">
             <li class="nav-item footer-logo">
-                <a href="{{ url_for('home', lang=lang) }}" class="nav-link px-3 text-body-secondary home-scroll-up">
+                <a href="{{ url_for('home', lang=lang) }}"
+                   class="nav-link px-3 text-body-secondary home-scroll-up"
+                    aria-label="{{ translations.home.title }}">
                     <i class="bi bi-house normal-icon"></i>
                 </a>
             </li>
             <li class="nav-item footer-logo">
                 <a href="https://www.facebook.com/club.termix/" target="_blank"
-                   class="nav-link px-3 text-body-secondary">
+                   class="nav-link px-3 text-body-secondary"
+                    aria-label="facebook">
                     <i class="bi bi-facebook normal-icon"></i>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="https://www.instagram.com/termix_club/" target="_blank"
-                   class="nav-link px-3 text-body-secondary">
+                   class="nav-link px-3 text-body-secondary"
+                    aria-label="instagram">
                     <i class="bi bi-instagram normal-icon"></i>
                 </a>
             </li>
