--- a/app/templates/information.html
+++ b/app/templates/information.html
@@ -52,7 +52,8 @@
 
             <!-- Display button for small screens -->
             <div class="d-block d-md-none text-center mt-3">
-                <a href="https://mapy.cz/s/dodegamezo" target="_blank" class="btn btn btn-outline-purple">
+                <a href="https://mapy.cz/s/dodegamezo" target="_blank" class="btn btn btn-outline-purple"
+                aria-label="Mapy.cz">
                     <i class="bi bi-geo-alt-fill normal-icon"></i> {{ location.map_button_text }}
                 </a>
             </div>
@@ -83,7 +84,8 @@
             <div class="col-12 col-md-6 text-center mb-2">
                 <h2 class="information-heading"> Chat </h2>
                 <a href="https://www.instagram.com/direct/t/17842514916029460" class="btn btn-outline-purple"
-                   target="_blank">
+                   target="_blank"
+                    aria-label="instagram chat">
                     <i class="bi bi-chat-dots-fill normal-icon"></i> Instagram
                 </a>
             </div>
