--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -41,7 +41,8 @@
     {% set fb_button_text = translations.about.fb_button_text %}
     <div class="row justify-content-center mt-5">
         <div class="col-12 col-md-6 text-center">
-            <a href="https://www.facebook.com/club.termix" class="btn btn-primary-purple">
+            <a href="https://www.facebook.com/club.termix" class="btn btn-primary-purple"
+            aria-label="facebook">
                 <i class="bi bi-facebook normal-icon"></i> {{ fb_button_text }}
             </a>
         </div>
@@ -57,17 +58,19 @@
 
     <div class="row justify-content-center text-center mt-5">
         <div class="col-lg-4 col-sm-6 text-center mb-2">
-            <a href="https://www.facebook.com/clubmax.cz" target="_blank">
+            <a href="https://www.facebook.com/clubmax.cz" target="_blank"
+            aria-label="facebook TerMax">
                 <img src="{{ url_for('static', filename='assets/logos/terMax.svg') }}" alt="terMax logo"
                      class="rounded-circle img-hover white-bg">
             </a>
         </div>
 
         <div class="col-lg-4 col-sm-6 text-center">
-            <a href="https://www.facebook.com/garageprague" target="_blank">
+            <a href="https://www.facebook.com/garageprague" target="_blank"
+            aria-label="facebook Garage">
                 <div class="circle-frame img-hover">
                     <img src="{{ url_for('static', filename='assets/logos/garage.svg') }}" id="garage-logo"
-                         alt="terMax logo">
+                         alt="Garage logo">
                 </div>
             </a>
         </div>
