--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -25,17 +25,30 @@
                 </div>
                 <div class="carousel-inner gallery-slide">
                     <div class="carousel-item active gallery-slide">
-                        <img class="gallery-picture"
-                             src="{{ url_for('static', filename='assets/gallery/1.avif') }}"
-                             alt="{{ translations.gallery.alt_text }}"
-                             width="100%" height="100%">
+                        <picture>
+                            <!-- Source for AVIF format -->
+                            <source srcset="{{ url_for('static', filename='assets/gallery/1.avif') }}"
+                                    type="image/avif">
+                            <!-- Fallback to JPG format -->
+                            <img class="gallery-picture"
+                                 src="{{ url_for('static', filename='assets/gallery/1.jpg') }}"
+                                 alt="{{ translations.gallery.alt_text }}"
+                                 width="100%" height="100%">
+                        </picture>
                     </div>
+
                     {% for i in range(2, 8) %}
                     <div class="carousel-item gallery-slide">
-                        <img class="gallery-picture"
-                             src="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.avif') }}"
-                             alt="{{ translations.gallery.alt_text }}"
-                             width="100%" height="100%">
+                        <picture>
+                            <!-- Source for AVIF format -->
+                            <source srcset="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.avif') }}"
+                                    type="image/avif">
+                            <!-- Fallback to JPG format -->
+                            <img class="gallery-picture"
+                                 src="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.jpg') }}"
+                                 alt="{{ translations.gallery.alt_text }}"
+                                 width="100%" height="100%">
+                        </picture>
                     </div>
                     {% endfor %}
                 </div>
@@ -58,22 +71,35 @@
     <div class="row d-flex justify-content-center">
         {% for i in range(8, 14) %}
         <div class="col-12 col-sm-11 col-xl-6 col-xxl-4 mb-4 mb-lg-0 d-flex justify-content-center">
-            <img
-                    src="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.avif') }}"
-                    alt="{{ translations.gallery.alt_text }}"
-                    class="w-100 shadow-1-strong rounded mb-4"
-            />
+            <picture>
+                <!-- Source for AVIF format -->
+                <source srcset="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.avif') }}" type="image/avif">
+
+                <!-- Fallback to JPG format -->
+                <img
+                        src="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.jpg') }}"
+                        alt="{{ translations.gallery.alt_text }}"
+                        class="w-100 shadow-1-strong rounded mb-4"
+                >
+            </picture>
         </div>
         {% endfor %}
 
         <div class="row d-none" id="hidden-image-section">
             {% for i in range(14, 23) %}
             <div class="col-12 col-sm-11 col-xl-6 col-xxl-4 mb-4 mb-lg-0 d-flex justify-content-center">
-                <img
-                        src="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.avif') }}"
-                        alt="{{ translations.gallery.alt_text }}"
-                        class="w-100 shadow-1-strong rounded mb-4"
-                />
+                <picture>
+                    <!-- Source for AVIF format -->
+                    <source srcset="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.avif') }}"
+                            type="image/avif">
+
+                    <!-- Fallback to JPG format -->
+                    <img
+                            src="{{ url_for('static', filename='assets/gallery/' ~ i ~ '.jpg') }}"
+                            alt="{{ translations.gallery.alt_text }}"
+                            class="w-100 shadow-1-strong rounded mb-4"
+                    >
+                </picture>
             </div>
             {% endfor %}
         </div>
