galerry socials buttons increase magrin

--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -119,7 +119,7 @@
 
     <div class="row d-flex justify-content-center">
         <div class="col-11 col-sm-10 col-xl-5 col-xxl-4  mb-4 mb-lg-0 ">
-            <div class="w-100 socials-frame">
+            <div class="w-100 socials-frame mt-2">
                 <a href="https://www.instagram.com/termix_club/" target="_blank">
                     <button type="button" class="btn frame-btn d-flex align-items-center justify-content-center"
                             id="ig-frame-btn">
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="col-11 col-sm-10 col-xl-5 col-xxl-4  mb-4 mb-lg-0 ">
-            <div class="w-100 socials-frame">
+            <div class="w-100 socials-frame mt-2">
                 <a href="https://www.facebook.com/club.termix/photos_albums" target="_blank">
                     <button type="button" class="btn frame-btn d-flex align-items-center justify-content-center"
                             id="fb-frame-btn">
