--- a/app/templates/gallery.html
+++ b/app/templates/gallery.html
@@ -26,7 +26,7 @@
 base_path='gallery',
 base_filename=base_filename,
 alt_text=alt_text,
-classes=['w-100', 'shadow-1-strong', 'rounded', 'mb-4']
+classes=['w-100', 'shadow-1-strong', 'rounded', 'mb-4', 'gallery-picture']
 ) }}
 {% endmacro %}
 
@@ -72,7 +72,7 @@ classes=['w-100', 'shadow-1-strong', 'rounded', 'mb-4']
                         base_path='gallery',
                         base_filename='1',
                         alt_text=translations.gallery.alt_text,
-                        classes=['gallery-picture', 'w-100', 'h-100']
+                        classes=['carousel-picture', 'w-100', 'h-100']
                         ) }}
                     </div>
 
@@ -82,7 +82,7 @@ classes=['w-100', 'shadow-1-strong', 'rounded', 'mb-4']
                         base_path='gallery',
                         base_filename=i|string,
                         alt_text=translations.gallery.alt_text,
-                        classes=['gallery-picture', 'w-100', 'h-100']
+                        classes=['carousel-picture', 'w-100', 'h-100']
                         ) }}
                     </div>
                     {% endfor %}
