basic event site - only posters

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,6 +74,8 @@
                     translations.home.title }}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('about', lang=lang) }}">{{
                     translations.about.title }}</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('events', lang=lang) }}">{{
+                    translations.events.title }}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('information', lang=lang) }}">{{
                     translations.information.title }}</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('drink_menu', lang=lang) }}">{{
