--- a/app/static/css/events_styles.css
+++ b/app/static/css/events_styles.css
@@ -1,42 +1,53 @@
 .flip-card {
-  background-color: transparent;
-  perspective: 1000px;
-  display: inline-block; /* Allows resizing based on content */
+    background-color: transparent;
+    width: 100%; /* Set to the desired width */
+    padding-top: 141.44%; /* Aspect ratio 1.4144:1 */
+    position: relative;
+    margin: 0 auto; /* Center the card */
+    perspective: 1000px; /* Keep 3D perspective */
+    cursor: pointer; /* Shows the pointer cursor when hovering */
 }
 
 .flip-card-inner {
-  position: relative;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+
+.flip-card-inner.is-flipped {
+    transform: rotateY(180deg);
 }
 
 .flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
 }
 
 .flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    background-color: var(--dark-purple);
+    font-family: 'Nunito', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    transform: rotateY(180deg);
+    padding: 20px;
 }
 
-.flip-card-front img {
-  display: block;
-  width: 100%;
-  height: auto;
+.flip-card-back p {
+    font-size: 1.2rem;
+}
+
+.card-picture{
+    width: 100%;
+    height: 100%
 }
